--- a/underConstruction/docker-compose.yml
+++ b/underConstruction/docker-compose.yml
@@ -1,10 +1,15 @@
-version: '2'
+version: '3'
 
 services:
   nginx-proxy:
     image: jwilder/nginx-proxy
-    mem_limit: 20m
+    #mem_limit: 20m
     restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 20M
     ports:
       - "80:80"
     volumes:
@@ -14,7 +19,13 @@ services:
 
   web:
     build: ./static_http
-    mem_limit: 10m
+    #mem_limit: 10m
+    deploy:
+      #replicas: 2
+      resources:
+        limits:
+          cpus: '0.10'
+          memory: 10M
     restart: always
     environment:
       - VIRTUAL_HOST=bobkubista.com
